--- a/static/style.css
+++ b/static/style.css
@@ -1,15 +1,45 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
+.label {
+    font-size: 15px;
 }
 
-.axis {
-  font: 14px sans-serif;
+.labelbold {
+    font-weight: bold;
 }
 
-.line {
-  fill: none;
-  stroke: lightblue;
-  stroke-width: 2px;
+.labelfade {
+    color: purple; 
 }
+
+.d3-tip {
+    line-height: 1;
+    padding: 6px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 4px;
+    font-size: 12px;
+  }
+
+  /* Creates a small triangle extender for the tooltip */
+  .d3-tip:after {
+    box-sizing: border-box;
+    display: inline;
+    font-size: 10px;
+    width: 100%;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.8);
+    content: "\25BC";
+    position: absolute;
+    text-align: center;
+  }
+
+  /* Style northward tooltips specifically */
+  .d3-tip.n:after {
+    margin: -2px 0 0 0;
+    top: 100%;
+    left: 0;
+  }
+
+  .data_header {
+    background-image: url('images/news450pxcrop_pexel.png');
+    height: 450px;
+  }
