--- a/templates/d3.html
+++ b/templates/d3.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Line Chart with Time Axis</title>
-  <link rel="stylesheet" href="../static/style.css">
-  <script src="https://d3js.org/d3.v4.js"></script>
-	<script src="https://d3js.org/d3-queue.v3.min.js"></script>
-
+  <meta charset="utf-8">
+  <title>Data Journalism</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-  
+
 </head>
 <body>
-  
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="../static/app.js"></script>
+  <br><br>
+  <div id="svgcontainer"></div>
+  <div id="chartAnalysis"></div>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
